<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.beigesoft.uml.android.MainActivity" >

    <item
        android:id="@+id/action_save_diagram"
        android:orderInCategory="2"
        android:title="@string/action_save_diagram"/>

    <item
        android:id="@+id/action_open_diagram"
        android:orderInCategory="3"
        android:title="@string/action_open_diagram"/>

    <item
        android:id="@+id/action_new_diagramclass"
        android:orderInCategory="4"
        android:title="@string/action_new_diagramclass"/>

    <item
        android:id="@+id/action_new_diagrampackage"
        android:orderInCategory="5"
        android:title="@string/action_new_diagrampackage"/>

    <item
        android:id="@+id/action_new_diagramobject"
        android:orderInCategory="6"
        android:title="@string/action_new_diagramobject"/>

    <item
        android:id="@+id/action_new_diagramusecase"
        android:orderInCategory="7"
        android:title="@string/action_new_diagramusecase"/>

    <item
        android:id="@+id/action_new_diagramsequence"
        android:orderInCategory="8"
        android:title="@string/action_new_diagramsequence"/>

    <item
        android:id="@+id/action_open_project"
        android:orderInCategory="17"
        android:title="@string/action_open_project"/>

    <item
        android:id="@+id/action_new_project"
        android:orderInCategory="18"
        android:title="@string/action_new_project"/>

    <item
        android:id="@+id/action_delete_selected_element"
        android:orderInCategory="19"
        android:title="@string/action_delete_selected_element"/>

    <item
        android:id="@+id/action_edit_project"
        android:orderInCategory="113"
        android:title="@string/action_edit_project"/>

    <item
        android:id="@+id/action_toolbar"
        android:orderInCategory="115"
        android:showAsAction="ifRoom"
        android:title="@string/action_toolbar">
        <menu>
            <group android:checkableBehavior="single">
			    <item
			        android:id="@+id/action_select"
			        android:checked="true"
			        android:title="@string/action_select"/>		    
			    <item
			        android:id="@+id/action_add_class"
			        android:title="@string/action_add_class"/>		    
			    <item
			        android:id="@+id/action_add_interface"
			        android:title="@string/action_add_interface"/>		    
			    <item
			        android:id="@+id/action_add_enum"
			        android:title="@string/action_add_enum"/>		    
			    <item
			        android:id="@+id/action_add_text"
			        android:title="@string/action_add_text"/>		    
			    <item
			        android:id="@+id/action_add_comment"
			        android:title="@string/action_add_comment"/>		    
			    <item
			        android:id="@+id/action_add_frame"
			        android:title="@string/action_add_frame"/>		    
			    <item
			        android:id="@+id/action_add_lifeline"
			        android:title="@string/action_add_lifeline"/>		    
			    <item
			        android:id="@+id/action_add_message"
			        android:title="@string/action_add_message"/>		    
			    <item
			        android:id="@+id/action_add_coregion_messages"
			        android:title="@string/action_add_coregion_messages"/>		    
			    <item
			        android:id="@+id/action_add_state_invariant_plus"
			        android:title="@string/action_add_state_invariant_plus"/>		    
			    <item
			        android:id="@+id/action_add_interaction_use"
			        android:title="@string/action_add_interaction_use"/>		    
			    <item
			        android:id="@+id/action_add_combined_fragment"
			        android:title="@string/action_add_combined_fragment"/>		    
			    <item
			        android:id="@+id/action_add_package"
			        android:title="@string/action_add_package"/>		    
			    <item
			        android:id="@+id/action_add_instance"
			        android:title="@string/action_add_instance"/>		    
			    <item
			        android:id="@+id/action_add_package_import"
			        android:title="@string/action_add_package_import"/>		    
			    <item
			        android:id="@+id/action_add_package_merge"
			        android:title="@string/action_add_package_merge"/>		    
			    <item
			        android:id="@+id/action_add_package_access"
			        android:title="@string/action_add_package_access"/>		    
			    <item
			        android:id="@+id/action_add_rectangle"
			        android:title="@string/action_add_rectangle"/>		    
			    <item
			        android:id="@+id/action_add_line"
			        android:title="@string/action_add_line"/>		    
			    <item
			        android:id="@+id/action_add_generalization"
			        android:title="@string/action_add_generalization"/>		    
			    <item
			        android:id="@+id/action_add_realization"
			        android:title="@string/action_add_realization"/>		    
			    <item
			        android:id="@+id/action_add_aggregation"
			        android:title="@string/action_add_aggregation"/>		    
			    <item
			        android:id="@+id/action_add_association"
			        android:title="@string/action_add_association"/>		    
			    <item
			        android:id="@+id/action_add_associationself"
			        android:title="@string/action_add_associationself"/>		    
			    <item
			        android:id="@+id/action_add_associationpoly"
			        android:title="@string/action_add_associationpoly"/>		    
			    <item
			        android:id="@+id/action_add_composition"
			        android:title="@string/action_add_composition"/>		    
			    <item
			        android:id="@+id/action_add_dependency"
			        android:title="@string/action_add_dependency"/>		    
			    <item
			        android:id="@+id/action_add_actor"
			        android:title="@string/action_add_actor"/>		   
			    <item
			        android:id="@+id/action_add_usecase"
			        android:title="@string/action_add_usecase"/>		   
			    <item
			        android:id="@+id/action_add_usecase_extended"
			        android:title="@string/action_add_usecase_extended"/>		   
			    <item
			        android:id="@+id/action_add_association_simple"
			        android:title="@string/action_add_association"/>		   
			    <item
			        android:id="@+id/action_add_generalization_simple"
			        android:title="@string/action_add_generalization"/>		   
			    <item
			        android:id="@+id/action_add_extend_simple"
			        android:title="@string/action_add_extend"/>		   
			    <item
			        android:id="@+id/action_add_include_simple"
			        android:title="@string/action_add_include"/>		   
		    </group>
        </menu>
    </item>

</menu>
