<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >
      
    <include layout = "@layout/for_indexz" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text" />
    
    <EditText
        android:id="@+id/taItsText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <CheckBox
        android:id="@+id/cbIsBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_bold" />

    <CheckBox
        android:id="@+id/cbIsTransparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IsTransparent" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tied_shape" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <EditText
	        android:id="@+id/tfTiedShape"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="text" />

	    <Button
	        android:id="@+id/btChooseTiedShape"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sign_choose" />
	    
	    <Button
	        android:id="@+id/btClearTiedShape"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sign_clear" />
	    
	</LinearLayout>
    
    <LinearLayout
        style="?android:attr/buttonBarStyle" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
             
        <include layout = "@layout/for_dialog_apply_ok_close" />
        
    </LinearLayout>
	    
</LinearLayout>
