<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
      
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >
    
    <include layout = "@layout/for_editor_member_class" />
            
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tfDefaultValue" />
    
    <EditText
        android:id="@+id/tfDefaultValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tfConstraintsValue" />
    
    <EditText
        android:id="@+id/tfConstraintsValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <CheckBox
        android:id="@+id/cbIsOrdered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbIsOrdered" />
   
    <CheckBox
        android:id="@+id/cbIsUnique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbIsUnique" />
   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tfLower" />
    
    <EditText
        android:id="@+id/tfLower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tfUpper" />
    
    <EditText
        android:id="@+id/tfUpper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
    <LinearLayout
        style="?android:attr/buttonBarStyle" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
             
        <include layout = "@layout/for_dialog_apply_ok_close" />
        
    </LinearLayout>
	    
 </LinearLayout>
 
</ScrollView>
