<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

    <include layout = "@layout/for_indexz" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name" />
    
    <EditText
        android:id="@+id/taName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
	    
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/cbIsAdjustMinimumSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbIsAdjustMinimumSize" />
   
    <CheckBox
        android:id="@+id/cbIsRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbIsRectangle" />
   
    <ListView
        android:id="@+id/lvExtentionPoints"
        android:layout_width="match_parent"        
        android:layout_height="0dp"
        android:layout_weight="1" >

    </ListView>
    
    <LinearLayout
        style="?android:attr/buttonBarStyle" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button android:id="@+id/btAddExtentionPoint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/add_ext"/>

        <Button android:id="@+id/btEditExtentionPoint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/edit_ext"/>
             
        <Button android:id="@+id/btDelExtentionPoint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/del_ext"/>
             
    </LinearLayout>
    	    
    <LinearLayout
        style="?android:attr/buttonBarStyle" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
             
        <include layout = "@layout/for_dialog_apply_ok_close" />
        
    </LinearLayout>
	    
</LinearLayout>
